--- a/test.ipynb
+++ b/test.ipynb
@@ -2,42 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "0\n",
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+      "30.862193350000005\n"
      ]
     }
    ],
    "source": [
-    "import os # Configure which GPU\n",
-    "import sionna as sn\n",
-    "import tensorflow as tf\n",
     "import numpy as np\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\" \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
-    "if os.getenv(\"CUDA_VISIBLE_DEVICES\") is None:\n",
-    "    gpu_num = 0 # Use \"\" to use the CPU\n",
-    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = f\"{gpu_num}\"\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
-    "\n",
-    "gpus = tf.config.list_physical_devices('GPU')\n",
-    "if gpus:\n",
-    "    try:\n",
-    "        tf.config.experimental.set_memory_growth(gpus[0], True)\n",
-    "    except RuntimeError as e:\n",
-    "        print(e)\n",
-    "# Avoid warnings from TensorFlow\n",
-    "tf.get_logger().setLevel('ERROR')\n",
-    "\n",
-    "# IPython \"magic function\" for inline plots\n",
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -56,19 +33,31 @@
     }
    ],
    "source": [
-    "# Configure the notebook to use only a single GPU and allocate only as much memory as needed\n",
-    "# For more details, see https://www.tensorflow.org/guide/gpu\n",
-    "gpus = tf.config.list_physical_devices('GPU')\n",
-    "print('Number of GPUs available :', len(gpus))\n",
-    "if gpus:\n",
-    "    gpu_num = 0 # Index of the GPU to be used\n",
-    "    try:\n",
-    "        #tf.config.set_visible_devices([], 'GPU')\n",
-    "        tf.config.set_visible_devices(gpus[gpu_num], 'GPU')\n",
-    "        print('Only GPU number', gpu_num, 'used.')\n",
-    "        tf.config.experimental.set_memory_growth(gpus[gpu_num], True)\n",
-    "    except RuntimeError as e:\n",
-    "        print(e)"
+    "# Results\n",
+    "# X axis\n",
+    "batch_size = [10, 20, 30, 40]\n",
+    "# Y axis\n",
+    "n_users = [10, 50, 100, 200, 500]\n",
+    "\n",
+    "GPU_time_mtx = np.array(\n",
+    "    [\n",
+    "        [3.33968159, 1.21448441, 1.20484757, 1.20683881],\n",
+    "        [1.20395274, 1.20092377, 1.22550964, 1.27275446],\n",
+    "        [1.27685839, 1.2167326, 1.3334493, 1.4076444],\n",
+    "        [1.43887454, 1.32733899, 1.47767497, 1.64362053],\n",
+    "        [1.67561587, 1.59558552, 2.04228889, 2.55751636],\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "CPU_time_mtx = np.array(\n",
+    "    [\n",
+    "        [2.47876338, 1.53614029, 1.654967, 1.78799748],\n",
+    "        [1.83627844, 2.60820633, 3.55381047, 4.79626307],\n",
+    "        [2.64821859, 4.81362568, 6.73642, 9.19763397],\n",
+    "        [5.12817738, 9.56979617, 14.91791624, 19.77867972],\n",
+    "        [11.38908466, 24.42006851, 36.22114766, 49.495076],\n",
+    "    ]\n",
+    ")"
    ]
   }
  ],
@@ -88,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
